<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:ignore="Deprecated" >

    <TextView
        android:id="@+id/e_codeIntroduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="76dp"
        android:layout_y="16dp"
        android:text="@string/bump_sensor"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/e_codeExpress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="54dp"
        android:text="@string/e_codeExpress"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/e_privacy1"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="220dp"
        android:text="@string/e_privacy1"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/e_appIntroText"
        android:layout_width="345dp"
        android:layout_height="126dp"
        android:layout_x="10dp"
        android:layout_y="84dp"
        android:text="@string/e_appIntroText"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/e_privacy2"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="259dp"
        android:text="@string/e_privacy2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/e_privacy3"
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="359dp"
        android:text="@string/e_privacy3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/e_privayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="197dp"
        android:text="@string/e_privacy"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/e_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="7dp"
        android:layout_y="392dp"
        android:text="@string/e_copyright"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/e_copyright1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="10dp"
        android:layout_y="418dp"
        android:text="@string/e_copyright1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/e_sysDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="7dp"
        android:layout_y="437dp"
        android:text="@string/e_sysDeveloper"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/green"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/e_sysdeveloper1"
        android:layout_width="486dp"
        android:layout_height="wrap_content"
        android:layout_x="9dp"
        android:layout_y="464dp"
        android:text="@string/e_sysdeveloper1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/e_sysdeveloper2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="484dp"
        android:text="@string/e_sysdeveloper2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black" />

</AbsoluteLayout>