<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:onClick="facebookButton"
    tools:ignore="Deprecated" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="325dp"
        android:layout_height="330dp"
        android:layout_x="18dp"
        android:layout_y="-27dp"
        android:contentDescription="@string/c_bump_sensor"
        android:src="@drawable/login_bump" />

    <TextView
        android:id="@+id/e_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="58dp"
        android:layout_y="13dp"
        android:text="@string/e_bump_sensor"
        android:textColor="@color/oil_green"
        android:textSize="32sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/e_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="20dp"
        android:layout_y="235dp"
        android:textColor="@color/black"
        android:textSize="25sp"        
        android:text="@string/e_login_email" />

    <TextView
        android:id="@+id/e_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="21dp"
        android:layout_y="286dp"
        android:textColor="@color/black"
        android:textSize="25sp"        
        android:text="@string/e_login_pwd" />

    <EditText
        android:id="@+id/e_login_pwd"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_x="169dp"
        android:layout_y="284dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/e_login_mail"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_x="110dp"
        android:layout_y="232dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:width="260dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/e_link_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="75dp"
        android:layout_y="336dp"
        android:text="@string/e_login_link_info"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/e_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="28dp"
        android:layout_y="360dp"
        android:contentDescription="@string/e_login_info"
        android:onClick="facebookButton"
        android:src="@drawable/fb" />

    <ImageButton
        android:id="@+id/e_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="154dp"
        android:layout_y="361dp"
        android:contentDescription="@string/e_login_info"
        android:onClick="gmailButton"
        android:src="@drawable/gmail" />

    <ImageButton
        android:id="@+id/e_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="282dp"
        android:layout_y="358dp"
        android:contentDescription="@string/e_login_info"
        android:onClick="linkedinButton"
        android:src="@drawable/linkedin" />

    <Button
        android:id="@+id/e_registration"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="200dp"
        android:layout_y="410dp"
        android:onClick="registerButton"
        android:text="@string/e_registration" />

    <Button
        android:id="@+id/e_unregistration"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="65dp"
        android:layout_y="410dp"
        android:onClick="unregisterButton"
        android:text="@string/e_unregistration" />

    <CheckBox
        android:id="@+id/e_check_logininfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="21dp"
        android:layout_y="487dp"
        android:textSize="14sp"
        android:text="@string/e_record_logininfo" />

    <Button
        android:id="@+id/e_login"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_x="145dp"
        android:layout_y="458dp"
        android:onClick="enterNavigation"
        android:text="@string/e_login" />

</AbsoluteLayout>