<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/e_returnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill_vertical|center"
        android:gravity="center_vertical"
        android:text="@string/investigator_report"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/Event"
        android:layout_below="@+id/Event"
        android:src="@drawable/location" android:contentDescription="@string/location"/>

    <ImageView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Photo"
        android:layout_alignRight="@+id/Location"
        android:layout_below="@+id/Location"
        android:src="@drawable/time" android:contentDescription="@string/Mark_Time"/>

    <TextView
        android:id="@+id/event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user"
        android:layout_alignTop="@+id/Event"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="19dp"
        android:text="@string/type_"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/locText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_type"
        android:layout_alignTop="@+id/Location"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="26dp"
        android:text="@string/location_"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/Event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Photo"
        android:layout_toLeftOf="@+id/user"
        android:contentDescription="@string/event_type"
        android:src="@drawable/event" />

    <ImageView
        android:id="@+id/User"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_alignRight="@+id/Photo"
        android:layout_below="@+id/e_returnText"
        android:contentDescription="@string/return_man"
        android:src="@drawable/user" />

    <ImageView
        android:id="@+id/Photo"
        android:layout_width="70dp"
        android:layout_height="78dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/User"
        android:contentDescription="@string/photo"
        android:src="@drawable/photo" />

    <Button
        android:id="@+id/e_snapshot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/event_type"
        android:layout_alignLeft="@+id/user"
        android:layout_below="@+id/User"
        android:onClick="e_snapshot"
        android:text="@string/snap_shot"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/e_nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/User"
        android:layout_alignTop="@+id/User"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="1dp"
        android:layout_toRightOf="@+id/event_type"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="25sp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/e_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Event"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Event"
        android:layout_toRightOf="@+id/event_type" />

    <EditText
        android:id="@+id/e_systemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Time"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/e_locationText"
        android:layout_toRightOf="@+id/time"
        android:ems="10"
        android:inputType="time"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/e_locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Location"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Location"
        android:layout_toRightOf="@+id/locText"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/e_hand_in_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/e_snapshot"
        android:layout_alignRight="@+id/e_returnText"
        android:layout_below="@+id/e_systemTime"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:minHeight="20dip"
        android:onClick="e_hand_in"
        android:text="@string/report"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/e_systemTime"
        android:layout_alignBottom="@+id/e_systemTime"
        android:layout_alignLeft="@+id/locText"
        android:text="@string/time_"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/e_nameText"
        android:layout_alignBottom="@+id/e_nameText"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/User"
        android:text="@string/user_"
        android:textColor="@color/black"
        android:textSize="25sp" />

</RelativeLayout>